force-app/main/default/objects/QQ_Quote_Template__c/QQ_Quote_Template__c.object-meta.xml
<CustomObject>
    <description
  >Quicker Quotes list custom setting: catalog of selectable Quote PDF templates (Id, name, sort order) for the flow's template picker.</description>
    <customSettingsType>List</customSettingsType>
    <label>Quicker Quotes PDF Template</label>
</CustomObject>