force-app/main/default/objects/QQ_Quote_Template__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description
  >Quicker Quotes: sort order of this template in the flow's PDF template picklist (ascending).</description>
    <inlineHelpText
  >Specifies the order for the picklist (ascending in value)</inlineHelpText>
    <label>Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>