force-app/main/default/objects/QQ_Quote_Template__c/fields/Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Template_Id__c</fullName>
    <description
  >Quicker Quotes: Salesforce Quote template Id this picker entry points to.</description>
    <label>Template Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>