force-app/main/default/objects/QQ_Quote_Template__c/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <description
  >Quicker Quotes: display label for this Quote PDF template option in the flow's picker.</description>
    <label>Template Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>